<resources>
    <string name="app_name">Super Simon</string>
    <string name="action_settings">Settings</string>

    <string name="titre">Super Simon</string>
    <string name="btnNiv1">Facile</string>
    <string name="btnNiv2">Normale</string>
    <string name="btnNiv3">Difficile</string>
    <string name="btnMeilleurScore">Meilleurs scores</string>

    <string name="title_activity_facile">FacileActivity</string>
    <string name="btnRetour">Retour</string>
    <string name="btnRejouer">Rejouer</string>

    <string name="btnNiv1_1"></string>
    <string name="btnNiv1_2"></string>
    <string name="btnNiv1_3"></string>
    <string name="btnNiv1_4"></string>

    <string name="title_activity_moyen">MoyenActivity</string>
    <string name="btnNiv2_1"></string>
    <string name="btnNiv2_2"></string>

    <string name="title_activity_difficile">DifficileActivity</string>
    <string name="btnNiv3_1"></string>
    <string name="btnNiv3_2"></string>
    <string name="btnNiv3_3"></string>

    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="gameover">GAME OVER</string>
    <string name="score">Score</string>
    <string name="numScore"></string>
    <string name="btnMenuPrincipal">Menu principal</string>

    <string name="title_activity_meilleur_score">MeilleurScoreActivity</string>
    <string name="meilleurScoreTitre">Meilleurs Scores</string>
    <string name="meilleurFacile">Facile : </string>
    <string name="numScoreFacile"></string>
    <string name="meilleurMoyen">Moyen : </string>
    <string name="numScoreMoyen"></string>
    <string name="meilleurDifficile">Difficile : </string>
    <string name="numScoreDIfficile"></string>

</resources>
