<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thomas.supersimon.MoyenActivity"
    tools:showIn="@layout/activity_moyen"
    android:background="#000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/vert"
                android:text="@string/btnNiv1_1"
                android:id="@+id/idButtonNiv1_1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/rouge"
                android:text="@string/btnNiv1_2"
                android:id="@+id/idButtonNiv1_2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/turquoise"
                android:text="@string/btnNiv2_1"
                android:id="@+id/idButtonNiv2_1" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/jaune"
                android:text="@string/btnNiv1_3"
                android:id="@+id/idButtonNiv1_3" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bleu"
                android:text="@string/btnNiv1_4"
                android:id="@+id/idButtonNiv1_4" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/violet"
                android:text="@string/btnNiv2_2"
                android:id="@+id/idButtonNiv2_2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearLayout3">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnRetour"
                android:textSize="@dimen/bouton"
                android:textStyle="bold"
                android:textColor="@color/blanc"
                android:id="@+id/idButtonRetour"
                android:background="@drawable/buttonshape"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btnRejouer"
                android:textSize="@dimen/bouton"
                android:textStyle="bold"
                android:textColor="@color/blanc"
                android:id="@+id/idButtonRejouer"
                android:background="@drawable/buttonshape"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
