<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thomas.supersimon.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#000000">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titre"
        android:textStyle="bold"
        android:textColor="@color/jaune"
        android:text="@string/titre"
        android:id="@+id/titre"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/vert"
        android:textStyle="italic"
        android:text="@string/btnNiv1"
        android:textSize="@dimen/boutonNiveau"
        android:id="@+id/idButtonNiv1"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/idButtonNiv2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bleu"
        android:textStyle="italic"
        android:text="@string/btnNiv2"
        android:textSize="@dimen/boutonNiveau"
        android:id="@+id/idButtonNiv2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rouge"
        android:textStyle="italic"
        android:text="@string/btnNiv3"
        android:textSize="@dimen/boutonNiveau"
        android:id="@+id/idButtonNiv3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/idButtonNiv2"/>

</RelativeLayout>
