<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thomas.supersimon.GameOverActivity"
    tools:showIn="@layout/activity_game_over"
    android:background="@color/orangePale">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titre"
        android:textStyle="bold"
        android:textColor="@color/rouge"
        android:text="@string/gameover"
        android:id="@+id/gameover"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/gameover">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/space"/>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/texte"
            android:text="@string/meilleurFacile"
            android:textColor="@color/noir"
            android:id="@+id/meilleurFacile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/texte"
            android:textColor="@color/noir"
            android:hint="0"
            android:id="@+id/numMeilleurFacile" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnMenuPrincipal"
            android:textSize="@dimen/bouton"
            android:textStyle="bold"
            android:textColor="@color/blanc"
            android:id="@+id/idButtonMenuPrincipal"
            android:background="@drawable/buttongameover"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnRejouer"
            android:textSize="@dimen/bouton"
            android:textStyle="bold"
            android:textColor="@color/blanc"
            android:id="@+id/idButtonRejouer"
            android:background="@drawable/buttongameover"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:id="@+id/space2"/>

    </LinearLayout>

</RelativeLayout>
